Utilizando variaveis de ambientes corretas para a build android.

--- a/.github/workflows/deploy_builds.yml
+++ b/.github/workflows/deploy_builds.yml
@@ -7,6 +7,11 @@ jobs:
   build-android:
     name: Build Android
     uses: ./.github/workflows/build_android.yml
+    secrets:
+      KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
 
   build-macos:
     name: Build macOS
