--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -1,8 +1,17 @@
 name: Build Android
 
 on:
-    workflow_call:
     workflow_dispatch:
+    workflow_call:
+        secrets:
+            KEYSTORE_BASE64:
+                required: false
+            KEYSTORE_PASSWORD:
+                required: false
+            KEY_PASSWORD:
+                required: false
+            KEY_ALIAS:
+                required: false  
 
 jobs:
   build-android:
@@ -29,12 +38,10 @@ jobs:
         run: flutter pub get
 
       - name: Decode Keystore
-        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
 
       - name: Create key.properties
-        if: ${{ secrets.KEYSTORE_PASSWORD != '' && secrets.KEY_PASSWORD != '' && secrets.KEY_ALIAS != '' }}
         run: |
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
