MacOS para versão mais recente. Chamando todas as builds e quem falhar, derruba tudo. tambem agora to expondo a Key Alias.

--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -37,9 +37,12 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
+      - name: Echo Key Alias
+        run: echo "${{ secrets.KEY_ALIAS }}"
+
       - name: Decode Keystore
-        run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+
 
       - name: Create key.properties
         run: |
