--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-ios:
     name: Build iOS App
-    runs-on: macos-13
+    runs-on: macos-latest
 
     steps:
       - name: Checkout Repository
