--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-macos:
     name: Build macOS App
-    runs-on: macos-13
+    runs-on: macos-latest
 
     steps:
       - name: Checkout Repository
