--- a/.github/workflows/deploy_builds.yml
+++ b/.github/workflows/deploy_builds.yml
@@ -21,38 +21,25 @@ jobs:
     name: Build Windows
     uses: ./.github/workflows/build_windows.yml
 
-  # Example: Uncomment and edit if you have an iOS build workflow
-  # build-ios:
-  #   name: Build iOS
-  #   uses: ./.github/workflows/build_ios.yml
+  build-ios:
+    name: Build iOS
+    uses: ./.github/workflows/build_ios.yml
 
-  check-critical-builds:
-    name: Ensure Critical Builds Succeeded
-    runs-on: ubuntu-latest
-    needs:
-      - build-android
-      # - build-ios  # Uncomment if you have build-ios
-    steps:
-      - name: Fail if Android Build Failed
-        if: needs.build-android.result != 'success'
-        run: |
-          echo "Android build failed."
-          exit 1
-      # - name: Fail if iOS Build Failed
-      #   if: needs.build-ios.result != 'success'
-      #   run: |
-      #     echo "iOS build failed."
-      #     exit 1
+  build-linux:
+    name: Build Linux
+    uses: ./.github/workflows/build_linux.yml
+
+
 
   release:
     name: Create GitHub Release With Built Artifacts
     runs-on: ubuntu-latest
     needs:
-      - check-critical-builds
       - build-android
+      - build-ios
       - build-macos
       - build-windows
-      # - build-ios
+      - build-linux
     steps:
       - name: Download Android APK
         if: needs.build-android.result == 'success'
