--- a/.github/workflows/deploy_builds.yml
+++ b/.github/workflows/deploy_builds.yml
@@ -13,6 +13,21 @@ jobs:
       KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
       KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
 
+
+  checkout-and-env:
+    name: Checkout and Create .env
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Create .env file from secrets
+        run: |
+          echo "KEYSTORE_BASE64=${{ secrets.KEYSTORE_BASE64 }}" >> .env
+          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> .env
+          echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> .env
+          echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> .env
+
   build-macos:
     name: Build macOS
     uses: ./.github/workflows/build_macos.yml
