--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -2,7 +2,6 @@ name: Build Linux
 
 on:
   workflow_call: 
-  workflow_dispatch:
 
 jobs:
   build-linux:
@@ -11,12 +10,12 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v6.0.1
+        uses: actions/checkout@v4
 
       - name: Set Up Flutter
         uses: subosito/flutter-action@v2.14.0
         with:
-          flutter-version: '3.38.3'
+          flutter-version: 3.38.3
           channel: 'stable'
 
       - name: Enable Linux Desktop
@@ -26,6 +25,10 @@ jobs:
         run: flutter pub get
 
       - name: Build Linux App (Release)
+        shell: /usr/bin/bash -e {0}
+        env:
+          FLUTTER_ROOT: /opt/hostedtoolcache/flutter/stable-3.38.3-x64
+          PUB_CACHE: /home/runner/.pub-cache
         run: flutter build linux --release
 
       - name: Upload Linux App Artifact
