--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -56,7 +56,7 @@ jobs:
                   echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/keystore.properties
                   echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/keystore.properties
                   echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/keystore.properties
-                  cat keystore.properties
+                  cat android/keystore.properties
 
 
             - name: Build App Bundle
