--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -1,7 +1,7 @@
 name: Build Linux
 
 on:
-  workflow_call: 
+  workflow_call:
 
 jobs:
   build-linux:
@@ -11,6 +11,14 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+      - name: Install Linux Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            liblzma-dev \
+            clang cmake ninja-build pkg-config \
+            libstdc++-12-dev
 
       - name: Set Up Flutter
         uses: subosito/flutter-action@v2.14.0
