--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -2,7 +2,7 @@ name: Build iOS
 
 on:
   workflow_call:
-    
+
 jobs:
   build-ios:
     name: Build iOS App
@@ -23,7 +23,8 @@ jobs:
 
       - name: Install CocoaPods Dependencies
         run: |
-          cd ios
+          ls -la
+          cd ./ios
           pod install
         working-directory: ./ios
 
@@ -40,5 +41,3 @@ jobs:
         with:
           name: ios-release-app
           path: build/ios/iphoneos/Runner.app
-
-          
