--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -1,7 +1,7 @@
 name: Build Windows
 
 on:
-    workflow_call:
+  workflow_call:
 
 jobs:
   build-windows:
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v6.0.1
+        uses: actions/checkout@v6
 
       - name: Set Up Flutter
         uses: subosito/flutter-action@v2.14.0
@@ -27,8 +27,8 @@ jobs:
       - name: Build Windows App (Release)
         run: flutter build windows --release
 
-      - name: Upload Windows App Artifact (Release Folder)
-        uses: actions/upload-artifact@v5.0.0
+      - name: Upload Windows Release Folder
+        uses: actions/upload-artifact@v5
         with:
           name: windows-release-app
           path: build/windows/x64/runner/Release/
@@ -37,7 +37,7 @@ jobs:
         run: flutter pub run msix:create --installer
 
       - name: Upload Windows Installer (.exe)
-        uses: actions/upload-artifact@v5.0.0
+        uses: actions/upload-artifact@v5
         with:
           name: windows-installer-exe
           path: build/windows/runner/installer/*.exe
@@ -46,7 +46,7 @@ jobs:
         run: flutter pub run msix:create
 
       - name: Upload Windows Installer (.msix)
-        uses: actions/upload-artifact@v5.0.0
+        uses: actions/upload-artifact@v5
         with:
           name: windows-installer-msix
           path: build/windows/runner/*.msix
