--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get_it: 8.3.0
+  get_it: ^9.2.0
+
 
 
 dev_dependencies:
@@ -44,7 +45,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
-  msix: ^3.16.12
+  msix: ^3.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
